--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -106,7 +106,7 @@
                                 <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
                             </div>
                         </td>
-                        <td class="' py-2">{{trip.route?.title}}</td>
+                        <td class="' py-2">{{trip.title}}</td>
                         <td class="' py-2">{{trip.tripDate }}</td>
                         <td class="' py-2">{{trip.time}}</td>
                         <td class="' py-2">{{trip.route?.title}}</td>
