--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -104,7 +104,7 @@
                         <td class="py-2">{{booking.bookingId}}</td>
                         <td class="py-2">{{booking.firstName}}, {{booking.lastName}}</td>
                         <td class="py-2">{{booking.phone}}</td>
-                        <td class="py-2">{{booking.trip?.route?.title }}</td>
+                        <td class="py-2">{{booking.trip?.title }}</td>
                         <td class="py-2">{{booking.trip?.bus }}</td>
                         <td class="py-2">{{booking.trip?.tripDate }} {{booking.trip?.time }}</td>
                         <td class="py-2">{{booking.tripAmount + booking.returnAmount }}</td>
