--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -724,19 +724,21 @@
                             2. The bus stops at only the designated bus stations for security reasons.
                         </p>
                         <p class="text-xs !text-[10px] pt-0.5">
-                            3. When you miss a bus (no show), we will issue you a new ticket at a discounted rate of
-                            ₦6,000. Fees to reschedule your ticket. If you cancel more than 24 hours to departure, you
-                            will pay ₦5,000 for reschedule.
+                            3. You are entitled to a total luggage allowance of 10kg. Any luggage above 10kg will be charged 
+                          at ₦120 per kg to a maximum of 25kg per bag subject to availability of boot space. If you choose to use 
+                          our cargo service the luggage will be charged at ₦60 per kg. Unaccompanied luggage is charged at ₦300 per kg. 
+                          Waybills are charged on a case by case basis with a minimum of ₦1,000. Oversized/irregular luggage can only be 
+                          carried with the cargo service.
                         </p>
                         <p class="text-xs !text-[10px] pt-0.5">
-                            4. A rescheduled ticket cannot be rescheduled.
+                            4. When you miss your bus (no show), we will issue you a new ticket at a discounted rate of ₦6,000. 
+                          We will charge ₦3,000 to reschedule your ticket with more than 24 hrs to departure and ₦5,000 with 
+                          less than 24hrs to departure.
                         </p>
                         <p class="text-xs !text-[10px] pt-0.5">
 
-                            5. You are entitled to a total luggage allowance of 10kg. Any luggage above 10kg will be
-                            charged at N100 per kg to a maximum of 25kg per bag subject to availability of boot space.
-                            If you choose to use our cargo service the luggage will be charged at N50 per kg.
-                            Oversized/irregular luggage can only be carried with the cargo service.
+                            5. A rescheduled ticket cannot be rescheduled. The longest period a booked ticket can remain 
+                               eligible for rescheduling is six (6) months from the original travel date
                         </p>
                         <p class="text-xs !text-[10px] pt-0.5 pb-[5px]">
                             6. Seats booked for Luggage must be at the full adult fare for the trip. Fragile items such
