--- a/src/app/buses/buses.component.html
+++ b/src/app/buses/buses.component.html
@@ -167,40 +167,44 @@
                         (click)="addRow()">
                         + New Row
                     </button>
+                    <button type="button"
+                        class="px-2 py-1 border rounded bg-red-100 hover:bg-red-200 text-red-700"
+                        (click)="clearAllSeats()">
+                        Clear All
+                    </button>
                 </div>
                 <div>
                     <div *ngIf="seatLayout.length === 0" class="text-gray-400 italic">No seats added yet.</div>
                     <div *ngIf="seatLayout.length > 0" class="border border-gray-300 rounded-lg p-3 bg-white">
-                        <div cdkDropList [cdkDropListData]="seatLayout" (cdkDropListDropped)="dropSeat($event)" class="flex flex-wrap gap-2 mb-1">
-                            <ng-container *ngFor="let seat of seatLayout; let i = index">
-                                <ng-container [ngSwitch]="seat">
-                                    <span *ngSwitchCase="'SPACE'"
-                                          cdkDrag
-                                          class="inline-flex items-center px-2 py-1 bg-gray-300 rounded text-gray-400 italic"
-                                          [ngClass]="{'ring-2 ring-green-400': lastAddedIndex === i}">
-                                        (space)
-                                        <button type="button" class="ml-1 text-red-600"
-                                                (click)="removeSeat(i)">×</button>
-                                    </span>
-                                    <span *ngSwitchCase="'STEERING'"
-                                          cdkDrag
-                                          class="inline-flex items-center px-2 py-1 bg-gray-200 rounded text-black font-bold"
-                                          [ngClass]="{'ring-2 ring-green-400': lastAddedIndex === i}">
-                                        <span>🛞</span>
-                                        <button type="button" class="ml-1 text-red-600"
-                                                (click)="removeSeat(i)">×</button>
-                                    </span>
-                                    <span *ngSwitchDefault
-                                          cdkDrag
-                                          class="inline-flex items-center px-2 py-1 rounded"
-                                          [ngClass]="{'bg-primary-200': lastAddedIndex !== i, 'bg-green-400': lastAddedIndex === i}">
-                                        {{seat}}
-                                        <button type="button" class="ml-1 text-red-600"
-                                                (click)="removeSeat(i)">×</button>
-                                    </span>
+                        <ng-container *ngFor="let row of getRowsWithIndices(); let rowIdx = index">
+                            <div class="flex flex-wrap gap-2 mb-1">
+                                <ng-container *ngFor="let seat of row">
+                                    <ng-container [ngSwitch]="seat.value">
+                                        <span *ngSwitchCase="'SPACE'"
+                                              class="inline-flex items-center px-2 py-1 bg-gray-300 rounded text-gray-400 italic"
+                                              [ngClass]="{'ring-2 ring-green-400': lastAddedIndex === seat.index}">
+                                            (space)
+                                            <button type="button" class="ml-1 text-red-600"
+                                                    (click)="removeSeat(seat.index)">×</button>
+                                        </span>
+                                        <span *ngSwitchCase="'STEERING'"
+                                              class="inline-flex items-center px-2 py-1 bg-gray-200 rounded text-black font-bold"
+                                              [ngClass]="{'ring-2 ring-green-400': lastAddedIndex === seat.index}">
+                                            <span>🛞</span>
+                                            <button type="button" class="ml-1 text-red-600"
+                                                    (click)="removeSeat(seat.index)">×</button>
+                                        </span>
+                                        <span *ngSwitchDefault
+                                              class="inline-flex items-center px-2 py-1 rounded"
+                                              [ngClass]="{'bg-primary-200': lastAddedIndex !== seat.index, 'bg-green-400': lastAddedIndex === seat.index}">
+                                            {{seat.value}}
+                                            <button type="button" class="ml-1 text-red-600"
+                                                    (click)="removeSeat(seat.index)">×</button>
+                                        </span>
+                                    </ng-container>
                                 </ng-container>
-                            </ng-container>
-                        </div>
+                            </div>
+                        </ng-container>
                         <small class="text-gray-500 block mt-1">Drag to rearrange seats. Click seat labels to add, "+ Space" to add a space, "+ New Row" to start a new row, click × to remove. Order = arrangement.</small>
                     </div>
                 </div>
