--- a/src/app/abookings/abookings.component.html
+++ b/src/app/abookings/abookings.component.html
@@ -713,11 +713,11 @@
                         <p class="text-xs pt-0.5">
                             4. A rescheduled ticket cannot be rescheduled.
                         </p>
-                        <p class="text-xs pt-0.5">
+                        <p class="text-[11px] pt-0.5">
 
                             5. You are entitled to a total luggage allowance of 10kg. Any luggage above 10kg will be
-                            charged at N100 per kg to a maximum of 25kg per bag subject to availability of boot space.
-                            If you choose to use our cargo service the luggage will be charged at N50 per kg.
+                            charged at N120 per kg to a maximum of 25kg per bag subject to availability of boot space.
+                            If you choose to use our cargo service the luggage will be charged at a minium of N1,000(case-by-case basis).
                             Oversized/irregular luggage can only be carried with the cargo service.
                         </p>
                         <p class="text-xs pt-0.5 pb-[5px]">
