--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "quill/dist/quill.snow.css";
 
 body{
 font-family: 'Nunito Sans', sans-serif !important;
