--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -134,7 +134,7 @@
                                                 class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">View
                                                 Booking</a>
                                         </li>
-                                        <li >
+                                        <li *ngIf="booking.paymentStatus === 'pending' && (booking.paystack_ref || booking.flutterwave_ref || booking.paystack_reference)">
                                             <a href="javascript:void(0)" (click)="verifyPayment(booking)"
                                                 class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Verify
                                                 Payment</a>
