--- a/src/app/duplicates/duplicates.component.html
+++ b/src/app/duplicates/duplicates.component.html
@@ -230,6 +230,12 @@
                       </a>
                     </li>
                     <li>
+                      <a href="javascript:void(0)" (click)="cancelNeedsReviewBooking(booking)" 
+                        class="block py-2 px-4 hover:bg-red-50 dark:hover:bg-red-900 dark:hover:text-white text-red-600 dark:text-red-400">
+                        Cancel & Free Seat
+                      </a>
+                    </li>
+                    <li>
                       <a href="javascript:void(0)" (click)="viewBookingDetails(booking)" 
                         class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
                         View Details
